--- a/css/styles.css
+++ b/css/styles.css
@@ -1,40 +1,57 @@
 body {background-color: #cdf1f0;}
 
-.mega {color: #303030; text-align: center;}
+.mega {color: white; text-align: center;}
+
+.megab {color: black; text-align: center;}
 
 ul {
 	list-style-type: none;
 	margin: auto;
 	padding: 10px;
 	overflow: hidden;
-	background-color: #5dafb6;
 	align-content: center;
 	
+}
+
+.lilink {
+	width: 6.5%;
+	margin:auto;
+	width: 30%;
+	margin-bottom: 15px;
+	border-style: ridge;
+	border-color:white;
+	color: white;
 }
 
 li {
 	width: 6.5%;
 	margin:auto;
 	width: 30%;
-	margin-top: 5px;
-	border-style: ridge;
-	border-color:black;
+	margin-bottom: 45px;
+	color: white;
+	text-align: center;
 }
 
 li a {
 	display: block;
-	color: black;
-	background-color:#fcdb8d;
+	color:white;
+	background-color:rgba(255, 255, 255, 0.1);
 	text-align:center;
 	padding: 16px;
 	text-decoration: none;
 }
 
 li a:hover {
-	background-color: #e98336;
+	background-color:rgba(255, 255, 255, 0.3);
 }
 
 hr {background-color: #dadada;}
+
+body {
+	background-image: url('../media/img/bg/5.png');
+	background-size: cover;
+	background-repeat: no-repeat;
+  }
 
 .foot {
 	position: fixed;
