--- a/css/styles.css
+++ b/css/styles.css
@@ -50,7 +50,7 @@ body {
 }
 
 body {
-	background-image: url('5.png');
+	background-image: url('bg/5.png');
 	background-size: cover;
 	background-repeat: no-repeat;
   }
