--- a/css/styles.css
+++ b/css/styles.css
@@ -2,6 +2,15 @@
 
 .megab {color: black; text-align: center;}
 
+.row {
+	display: flex;
+  }
+  
+.column {
+	flex: 25%;
+	padding: 5px;
+  }
+
 ul {
 	list-style-type: none;
 	margin: auto;
@@ -12,8 +21,8 @@ ul {
 }
 
 img {
-	max-width: 500px;
 	margin-top: 50px;
+	max-height: 450px;
 }
 
 video {
