--- a/css/styles.css
+++ b/css/styles.css
@@ -10,21 +10,44 @@
 	flex: 25%;
 	padding: 5px;
   }
-
 ul {
 	list-style-type: none;
 	margin: auto;
 	padding: 10px;
 	overflow: hidden;
 	align-content: center;
-	
+}
+
+table, th, td {
+	border-bottom: 1px solid white;
+	color: white;
+	background-color: rgba(255, 255, 255, 0.05);
+	padding: 20px;
+	text-align: center;
+	margin: auto;
+  }
+
+tr:hover {
+	background-color: rgba(255, 255, 255, 0.1);
+}
+
+table {
+	width: 75%;
+	border-collapse: collapse;
+}
+
+th {
+	border-width: 2.5px;
+	background-color: rgba(255, 255, 255, 0.1);
 }
 
 img {
 	margin-top: 50px;
-	max-height: 450px;
 }
-
+select {
+	margin-left: 30px;
+	margin-right: 30px;
+}
 video {
 	max-height: 720px;
 	margin-top: 50px;
