--- a/manga/styles.css
+++ b/manga/styles.css
@@ -18,3 +18,10 @@ button{
 }
 
 .desc {text-align: center; margin-top: 30px; color: white;}
+
+img{
+    max-height:850px;
+    max-width: 100%;
+    margin-bottom: 25px;
+    margin-top: 5px;
+}
